--- a/config.json
+++ b/config.json
@@ -1,8 +1,7 @@
 {
-  "OPENAI_API_KEY": "${OPENAI_API_KEY}",
   "USERNAME": "${User_Name}",
   "PASSWORD": "${Password}",
-  "LOGIN_URL": "${https://example.com/login}",
+  "LOGIN_URL": "",
   "USERNAME_FIELD": "username",
   "PASSWORD_FIELD": "password",
   "JS_WAIT_SELECTOR": "div.dynamic-section", 
@@ -16,7 +15,9 @@
   ],
   "llm": {
     "model_type": "OpenAI",
+    "openai_api_key": "${OPENAI_API_KEY}",
     "openai_model_name": "gpt-4o-mini",
+    "openai_model_choices": ["gpt-4", "gpt-4o", "gpt-4o-mini", "gpt-3.5-turbo"],
     "ollama_model_name": "llama3",
     "ollama_api_url": "http://localhost:11434",
     "ollama_model_choices": ["llama3", "gemma", "mistral", "phi3"],
